Fix crashing on binder

--- a/interactive-ml-demo.imjoy.html
+++ b/interactive-ml-demo.imjoy.html
@@ -14,7 +14,7 @@
   "api_version": "0.1.8",
   "env": "",
   "permissions": [],
-  "requirements": ["repo:https://github.com/imjoy-team/imjoy-interactive-segmentation", "pip:-r imjoy-interactive-segmentation/requirements.txt"],
+  "requirements": ["repo:https://github.com/imjoy-team/imjoy-interactive-segmentation", "cmd: pip install -r imjoy-interactive-segmentation/requirements.txt --no-cache-dir"],
   "dependencies": []
 }
 </config>
