switch binder image

--- a/interactive-ml-demo.imjoy.html
+++ b/interactive-ml-demo.imjoy.html
@@ -12,7 +12,7 @@
   "flags": [],
   "icon": "extension",
   "api_version": "0.1.8",
-  "env": "",
+  "env": [{"type": "binder", "spec": "imjoy-team/imjoy-binder-image/deep-learning", "skip_requirements": false}],
   "permissions": [],
   "requirements": ["repo:https://github.com/imjoy-team/imjoy-interactive-segmentation", "cmd: pip install -r imjoy-interactive-segmentation/requirements.txt --no-cache-dir"],
   "dependencies": []
