Pass model_config instead of a model instance

--- a/interactive-ml-demo.imjoy.html
+++ b/interactive-ml-demo.imjoy.html
@@ -27,7 +27,6 @@ import os
 from download_example_dataset import download_with_url
 from imjoy import api
 from imjoy_plugin import start_interactive_segmentation
-from models.interactive_cellpose import CellPoseInteractiveModel
 
 # download exmaple dataset
 os.makedirs("data", exist_ok=True)
@@ -43,15 +42,19 @@ else:
         + dataset_path
     )
 
-model = CellPoseInteractiveModel('./data/hpa_dataset_v2/__models__',
-                                channels=[2, 3],
-                                style_on=0,
-                                default_diameter=100)
-start_interactive_segmentation(model,
+model_config = dict(type="cellpose",
+                    model_dir='./data/hpa_dataset_v2/__models__',
+                    channels=[2, 3],
+                    style_on=0,
+                    default_diameter=100,
+                    batch_size=1,
+                    use_gpu=True,
+                    pretrained_model=False,
+                    resume=True)
+
+start_interactive_segmentation(model_config,
             "./data/hpa_dataset_v2",
             ["microtubules.png", "er.png", "nuclei.png"],
             object_name="cell",
-            scale_factor=1.0,
-            batch_size=1,
-            resume=True)
+            scale_factor=1.0)
 </script>
